--- a/.config/latte/keyiflerolsun.layout.latte
+++ b/.config/latte/keyiflerolsun.layout.latte
@@ -64,7 +64,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:telegramdesktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:realvnc-vncviewer.desktop,applications:com.spotify.Client.desktop,applications:mongodb-compass.desktop,applications:authy.desktop
+launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:authy_authy.desktop
 manualScrollTasksType=Disabled
 
 [Containments][1][Applets][5]
@@ -161,167 +161,6 @@ type=org.kde.latte.default
 activeStyle=Dot
 minimizedTaskColoredDifferently=true
 
-[Containments][15]
-activityId=
-byPassWM=false
-dockWindowBehavior=true
-enableKWinEdges=true
-formfactor=2
-immutability=1
-isPreferredForShortcuts=false
-lastScreen=13
-layoutId=
-location=4
-maxLength=100
-name=Mi - Alt - Nvidia
-onPrimary=false
-plugin=org.kde.latte.containment
-raiseOnActivityChange=false
-raiseOnDesktopChange=false
-settingsComplexity=4
-timerHide=700
-timerShow=200
-viewType=0
-visibility=2
-wallpaperplugin=org.kde.image
-
-[Containments][15][Applets][42]
-immutability=1
-plugin=org.kde.latte.separator
-
-[Containments][15][Applets][42][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][49]
-immutability=1
-plugin=org.kde.plasma.minimizeall
-
-[Containments][15][Applets][49][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][49][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][15][Applets][50]
-activityId=
-formfactor=0
-immutability=1
-lastScreen=-1
-location=0
-plugin=org.kde.plasma.folder
-wallpaperplugin=
-
-[Containments][15][Applets][50][Configuration]
-PreloadWeight=0
-activityId=
-formfactor=0
-immutability=1
-lastScreen=-1
-location=0
-plugin=org.kde.plasma.folder
-wallpaperplugin=
-
-[Containments][15][Applets][50][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][15][Applets][50][Configuration][General]
-labelMode=3
-labelText=İndirilenler
-positions={"1920x1080":[]\\,"1600x900":[""]}
-url=file:///home/keyiflerolsun/İndirilenler
-viewMode=1
-
-[Containments][15][Applets][51]
-immutability=1
-plugin=org.kde.latte.plasmoid
-
-[Containments][15][Applets][51][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][51][Configuration][General]
-isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:code_code.desktop,applications:telegramdesktop.desktop,applications:org.kde.dolphin.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:realvnc-vncviewer.desktop,applications:com.spotify.Client.desktop,applications:mongodb-compass.desktop,applications:authy.desktop
-manualScrollTasksType=Disabled
-
-[Containments][15][Applets][52]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][15][Applets][52][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][52][Configuration][General]
-containmentType=Latte
-
-[Containments][15][Applets][53]
-immutability=1
-plugin=org.kde.plasma.trash
-
-[Containments][15][Applets][53][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][54]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][15][Applets][54][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][54][Configuration][General]
-containmentType=Latte
-
-[Containments][15][Applets][55]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][15][Applets][55][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][55][Configuration][General]
-containmentType=Latte
-
-[Containments][15][ConfigDialog]
-DialogHeight=894
-DialogWidth=539
-
-[Containments][15][Configuration]
-PreloadWeight=0
-
-[Containments][15][General]
-addLaunchersInTaskManager=false
-advanced=false
-alignment=0
-alignmentUpgraded=true
-appletOrder=51;54;52;55;42;50;49;53
-iconSize=50
-inConfigureAppletsMode=true
-lockedZoomApplets=50;49;53
-panelShadows=false
-panelSize=5
-screenEdgeMargin=-1
-shadowOpacity=60
-shadowSize=45
-shadowsUpgraded=true
-showGlow=false
-splitterPosition=1
-splitterPosition2=2
-tasksUpgraded=true
-thickMargin=15
-zoomLevel=16
-
-[Containments][15][Indicator]
-customType=
-enabled=true
-enabledForApplets=true
-padding=0.10000000149011612
-type=org.kde.latte.default
-
-[Containments][15][Indicator][org.kde.latte.default][General]
-activeStyle=Dot
-minimizedTaskColoredDifferently=true
-
 [Containments][16]
 activityId=
 byPassWM=false
@@ -404,7 +243,7 @@ PreloadWeight=0
 
 [Containments][16][Applets][44][Configuration][General]
 isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:telegramdesktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:realvnc-vncviewer.desktop,applications:com.spotify.Client.desktop,applications:mongodb-compass.desktop,applications:authy.desktop
+launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:authy_authy.desktop
 manualScrollTasksType=Disabled
 
 [Containments][16][Applets][45]
@@ -486,13 +325,178 @@ type=org.kde.latte.default
 activeStyle=Dot
 minimizedTaskColoredDifferently=true
 
-[Containments][17]
+[Containments][18]
 activityId=
 byPassWM=false
 dockWindowBehavior=true
 enableKWinEdges=true
 formfactor=2
 immutability=1
+isClonedFrom=-1
+isPreferredForShortcuts=false
+lastScreen=13
+layoutId=
+location=4
+maxLength=100
+name=Mi - Alt - Nvidia
+onPrimary=false
+plugin=org.kde.latte.containment
+raiseOnActivityChange=false
+raiseOnDesktopChange=false
+screensGroup=0
+settingsComplexity=4
+timerHide=700
+timerShow=200
+viewType=0
+visibility=2
+wallpaperplugin=org.kde.image
+
+[Containments][18][Applets][64]
+immutability=1
+plugin=org.kde.latte.separator
+
+[Containments][18][Applets][64][Configuration]
+PreloadWeight=0
+
+[Containments][18][Applets][65]
+immutability=1
+plugin=org.kde.plasma.minimizeall
+
+[Containments][18][Applets][65][Configuration]
+PreloadWeight=0
+
+[Containments][18][Applets][65][Configuration][ConfigDialog]
+DialogHeight=660
+DialogWidth=880
+
+[Containments][18][Applets][66]
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][18][Applets][66][Configuration]
+PreloadWeight=0
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][18][Applets][66][Configuration][ConfigDialog]
+DialogHeight=660
+DialogWidth=880
+
+[Containments][18][Applets][66][Configuration][General]
+labelMode=3
+labelText=İndirilenler
+positions={"1920x1080":[]\\,"1600x900":[""]}
+url=file:///home/keyiflerolsun/İndirilenler
+viewMode=1
+
+[Containments][18][Applets][67]
+immutability=1
+plugin=org.kde.latte.plasmoid
+
+[Containments][18][Applets][67][Configuration]
+PreloadWeight=0
+
+[Containments][18][Applets][67][Configuration][General]
+isInLatteDock=true
+launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:authy_authy.desktop
+manualScrollTasksType=Disabled
+
+[Containments][18][Applets][68]
+immutability=1
+plugin=org.kde.latte.spacer
+
+[Containments][18][Applets][68][Configuration]
+PreloadWeight=0
+
+[Containments][18][Applets][68][Configuration][General]
+containmentType=Latte
+
+[Containments][18][Applets][69]
+immutability=1
+plugin=org.kde.plasma.trash
+
+[Containments][18][Applets][69][Configuration]
+PreloadWeight=0
+
+[Containments][18][Applets][70]
+immutability=1
+plugin=org.kde.latte.spacer
+
+[Containments][18][Applets][70][Configuration]
+PreloadWeight=0
+
+[Containments][18][Applets][70][Configuration][General]
+containmentType=Latte
+
+[Containments][18][Applets][71]
+immutability=1
+plugin=org.kde.latte.spacer
+
+[Containments][18][Applets][71][Configuration]
+PreloadWeight=0
+
+[Containments][18][Applets][71][Configuration][General]
+containmentType=Latte
+
+[Containments][18][ConfigDialog]
+DialogHeight=894
+DialogWidth=539
+
+[Containments][18][Configuration]
+PreloadWeight=0
+
+[Containments][18][General]
+addLaunchersInTaskManager=false
+advanced=false
+alignment=0
+alignmentUpgraded=true
+appletOrder=67;70;68;71;64;66;65;69
+iconSize=50
+inConfigureAppletsMode=true
+lockedZoomApplets=66;65;69
+panelShadows=false
+panelSize=5
+panelTransparency=20
+screenEdgeMargin=-1
+shadowOpacity=60
+shadowSize=45
+shadowsUpgraded=true
+showGlow=false
+splitterPosition=1
+splitterPosition2=2
+tasksUpgraded=true
+thickMargin=15
+zoomLevel=16
+
+[Containments][18][Indicator]
+customType=
+enabled=true
+enabledForApplets=true
+padding=0.10000000149011612
+type=org.kde.latte.default
+
+[Containments][18][Indicator][org.kde.latte.default][General]
+activeStyle=Dot
+minimizedTaskColoredDifferently=true
+
+[Containments][19]
+activityId=
+byPassWM=false
+dockWindowBehavior=true
+enableKWinEdges=true
+formfactor=2
+immutability=1
+isClonedFrom=-1
 isPreferredForShortcuts=false
 lastScreen=12
 layoutId=
@@ -503,6 +507,7 @@ onPrimary=false
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
+screensGroup=0
 settingsComplexity=4
 timerHide=700
 timerShow=200
@@ -510,56 +515,56 @@ viewType=0
 visibility=6
 wallpaperplugin=org.kde.image
 
-[Containments][17][Applets][56]
+[Containments][19][Applets][72]
 immutability=1
 plugin=org.kde.latte.spacer
 
-[Containments][17][Applets][56][Configuration]
+[Containments][19][Applets][72][Configuration]
 PreloadWeight=0
 
-[Containments][17][Applets][56][Configuration][General]
+[Containments][19][Applets][72][Configuration][General]
 containmentType=Latte
 
-[Containments][17][Applets][57]
+[Containments][19][Applets][73]
 immutability=1
 plugin=org.kde.latte.spacer
 
-[Containments][17][Applets][57][Configuration]
+[Containments][19][Applets][73][Configuration]
 PreloadWeight=0
 
-[Containments][17][Applets][57][Configuration][General]
+[Containments][19][Applets][73][Configuration][General]
 containmentType=Latte
 
-[Containments][17][Applets][58]
+[Containments][19][Applets][74]
 immutability=1
 plugin=org.kde.plasma.trash
 
-[Containments][17][Applets][58][Configuration]
+[Containments][19][Applets][74][Configuration]
 PreloadWeight=0
 
-[Containments][17][Applets][59]
+[Containments][19][Applets][75]
 immutability=1
 plugin=org.kde.latte.plasmoid
 
-[Containments][17][Applets][59][Configuration]
+[Containments][19][Applets][75][Configuration]
 PreloadWeight=0
 
-[Containments][17][Applets][59][Configuration][General]
+[Containments][19][Applets][75][Configuration][General]
 isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:code_code.desktop,applications:telegramdesktop.desktop,applications:org.kde.dolphin.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:realvnc-vncviewer.desktop,applications:com.spotify.Client.desktop,applications:mongodb-compass.desktop,applications:authy.desktop
+launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:authy_authy.desktop
 manualScrollTasksType=Disabled
 
-[Containments][17][Applets][60]
+[Containments][19][Applets][76]
 immutability=1
 plugin=org.kde.latte.spacer
 
-[Containments][17][Applets][60][Configuration]
+[Containments][19][Applets][76][Configuration]
 PreloadWeight=0
 
-[Containments][17][Applets][60][Configuration][General]
+[Containments][19][Applets][76][Configuration][General]
 containmentType=Latte
 
-[Containments][17][Applets][61]
+[Containments][19][Applets][77]
 activityId=
 formfactor=0
 immutability=1
@@ -568,7 +573,7 @@ location=0
 plugin=org.kde.plasma.folder
 wallpaperplugin=
 
-[Containments][17][Applets][61][Configuration]
+[Containments][19][Applets][77][Configuration]
 PreloadWeight=0
 activityId=
 formfactor=0
@@ -578,52 +583,52 @@ location=0
 plugin=org.kde.plasma.folder
 wallpaperplugin=
 
-[Containments][17][Applets][61][Configuration][ConfigDialog]
+[Containments][19][Applets][77][Configuration][ConfigDialog]
 DialogHeight=660
 DialogWidth=880
 
-[Containments][17][Applets][61][Configuration][General]
+[Containments][19][Applets][77][Configuration][General]
 labelMode=3
 labelText=İndirilenler
 positions={"1920x1080":[]\\,"1600x900":[]}
 url=file:///home/keyiflerolsun/İndirilenler
 viewMode=1
 
-[Containments][17][Applets][62]
+[Containments][19][Applets][78]
 immutability=1
 plugin=org.kde.plasma.minimizeall
 
-[Containments][17][Applets][62][Configuration]
+[Containments][19][Applets][78][Configuration]
 PreloadWeight=0
 
-[Containments][17][Applets][62][Configuration][ConfigDialog]
+[Containments][19][Applets][78][Configuration][ConfigDialog]
 DialogHeight=660
 DialogWidth=880
 
-[Containments][17][Applets][63]
+[Containments][19][Applets][79]
 immutability=1
 plugin=org.kde.latte.separator
 
-[Containments][17][Applets][63][Configuration]
+[Containments][19][Applets][79][Configuration]
 PreloadWeight=0
 
-[Containments][17][ConfigDialog]
+[Containments][19][ConfigDialog]
 DialogHeight=894
 DialogWidth=539
 
-[Containments][17][Configuration]
+[Containments][19][Configuration]
 PreloadWeight=0
 
-[Containments][17][General]
+[Containments][19][General]
 addLaunchersInTaskManager=false
 advanced=false
 alignment=0
 alignmentUpgraded=true
-appletOrder=59;60;57;56;63;61;62;58
+appletOrder=75;76;73;72;79;77;78;74
 iconSize=50
 inConfigureAppletsMode=true
 lastWindowsVisibilityMode=6
-lockedZoomApplets=61;62;58
+lockedZoomApplets=77;78;74
 panelShadows=false
 panelSize=100
 panelTransparency=20
@@ -638,14 +643,14 @@ tasksUpgraded=true
 thickMargin=15
 zoomLevel=16
 
-[Containments][17][Indicator]
+[Containments][19][Indicator]
 customType=
 enabled=true
 enabledForApplets=true
 padding=0.10000000149011612
 type=org.kde.latte.default
 
-[Containments][17][Indicator][org.kde.latte.default][General]
+[Containments][19][Indicator][org.kde.latte.default][General]
 activeStyle=Dot
 minimizedTaskColoredDifferently=true
 
@@ -656,7 +661,7 @@ color=blue
 customBackground=
 customTextColor=
 icon=manjarolinux
-lastUsedActivity=bed274ec-c66a-46ec-8fc5-d114f83ecabd
+lastUsedActivity=d4782c07-b81e-4d06-bd46-5cf6f18c7959
 launchers=
 popUpMargin=-1
 preferredForShortcutsTouched=true
