--- a/.config/latte/keyiflerolsun.layout.latte
+++ b/.config/latte/keyiflerolsun.layout.latte
@@ -64,7 +64,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
+launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.anydesk.Anydesk.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
 manualScrollTasksType=Disabled
 
 [Containments][1][Applets][5]
@@ -243,7 +243,7 @@ PreloadWeight=0
 
 [Containments][16][Applets][44][Configuration][General]
 isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
+launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.anydesk.Anydesk.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
 manualScrollTasksType=Disabled
 
 [Containments][16][Applets][45]
@@ -408,7 +408,7 @@ PreloadWeight=0
 
 [Containments][18][Applets][67][Configuration][General]
 isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
+launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.anydesk.Anydesk.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
 manualScrollTasksType=Disabled
 
 [Containments][18][Applets][68]
@@ -551,7 +551,7 @@ PreloadWeight=0
 
 [Containments][19][Applets][75][Configuration][General]
 isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
+launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.anydesk.Anydesk.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
 manualScrollTasksType=Disabled
 
 [Containments][19][Applets][76]
@@ -661,7 +661,7 @@ color=blue
 customBackground=
 customTextColor=
 icon=manjarolinux
-lastUsedActivity=d4782c07-b81e-4d06-bd46-5cf6f18c7959
+lastUsedActivity=5a04cb83-2d65-444b-94c2-07d80107921c
 launchers=
 popUpMargin=-1
 preferredForShortcutsTouched=true
