--- a/.config/latte/keyiflerolsun.layout.latte
+++ b/.config/latte/keyiflerolsun.layout.latte
@@ -8,12 +8,14 @@ dockWindowBehavior=true
 enableKWinEdges=true
 formfactor=2
 immutability=1
+isClonedFrom=-1
 isPreferredForShortcuts=false
-lastScreen=10
+lastScreen=15
 layoutId=
 location=4
+maxLength=100
 name=Mi - Alt
-onPrimary=false
+onPrimary=true
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
@@ -64,7 +66,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.anydesk.Anydesk.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
+launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.anydesk.Anydesk.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
 manualScrollTasksType=Disabled
 
 [Containments][1][Applets][5]
@@ -132,6 +134,7 @@ PreloadWeight=0
 [Containments][1][General]
 addLaunchersInTaskManager=false
 advanced=false
+alignment=0
 alignmentUpgraded=true
 appletOrder=2;13;14;12;8;5;6;7
 iconSize=50
@@ -140,6 +143,7 @@ lockedZoomApplets=5;6;7
 panelShadows=false
 panelSize=5
 panelTransparency=20
+screenEdgeMargin=-1
 shadowOpacity=60
 shadowSize=45
 shadowsUpgraded=true
@@ -161,171 +165,7 @@ type=org.kde.latte.default
 activeStyle=Dot
 minimizedTaskColoredDifferently=true
 
-[Containments][16]
-activityId=
-byPassWM=false
-dockWindowBehavior=true
-enableKWinEdges=true
-formfactor=2
-immutability=1
-isPreferredForShortcuts=false
-lastScreen=11
-layoutId=
-location=4
-maxLength=100
-name=Laptop - Alt
-onPrimary=false
-plugin=org.kde.latte.containment
-raiseOnActivityChange=false
-raiseOnDesktopChange=false
-screensGroup=0
-settingsComplexity=4
-timerHide=700
-timerShow=200
-viewType=0
-visibility=6
-wallpaperplugin=org.kde.image
-
-[Containments][16][Applets][40]
-immutability=1
-plugin=org.kde.latte.separator
-
-[Containments][16][Applets][40][Configuration]
-PreloadWeight=0
-
-[Containments][16][Applets][41]
-immutability=1
-plugin=org.kde.plasma.minimizeall
-
-[Containments][16][Applets][41][Configuration]
-PreloadWeight=0
-
-[Containments][16][Applets][41][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][16][Applets][43]
-activityId=
-formfactor=0
-immutability=1
-lastScreen=-1
-location=0
-plugin=org.kde.plasma.folder
-wallpaperplugin=
-
-[Containments][16][Applets][43][Configuration]
-PreloadWeight=0
-activityId=
-formfactor=0
-immutability=1
-lastScreen=-1
-location=0
-plugin=org.kde.plasma.folder
-wallpaperplugin=
-
-[Containments][16][Applets][43][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][16][Applets][43][Configuration][General]
-labelMode=3
-labelText=İndirilenler
-positions={"1920x1080":[]\\,"1600x900":[]}
-url=file:///home/keyiflerolsun/İndirilenler
-viewMode=1
-
-[Containments][16][Applets][44]
-immutability=1
-plugin=org.kde.latte.plasmoid
-
-[Containments][16][Applets][44][Configuration]
-PreloadWeight=0
-
-[Containments][16][Applets][44][Configuration][General]
-isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.anydesk.Anydesk.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
-manualScrollTasksType=Disabled
-
-[Containments][16][Applets][45]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][16][Applets][45][Configuration]
-PreloadWeight=0
-
-[Containments][16][Applets][45][Configuration][General]
-containmentType=Latte
-
-[Containments][16][Applets][46]
-immutability=1
-plugin=org.kde.plasma.trash
-
-[Containments][16][Applets][46][Configuration]
-PreloadWeight=0
-
-[Containments][16][Applets][47]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][16][Applets][47][Configuration]
-PreloadWeight=0
-
-[Containments][16][Applets][47][Configuration][General]
-containmentType=Latte
-
-[Containments][16][Applets][48]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][16][Applets][48][Configuration]
-PreloadWeight=0
-
-[Containments][16][Applets][48][Configuration][General]
-containmentType=Latte
-
-[Containments][16][ConfigDialog]
-DialogHeight=894
-DialogWidth=539
-
-[Containments][16][Configuration]
-PreloadWeight=0
-
-[Containments][16][General]
-addLaunchersInTaskManager=false
-advanced=false
-alignment=0
-alignmentUpgraded=true
-appletOrder=44;47;45;48;40;43;41;46
-iconSize=50
-inConfigureAppletsMode=true
-lastWindowsVisibilityMode=6
-lockedZoomApplets=43;41;46
-panelShadows=false
-panelSize=100
-panelTransparency=20
-screenEdgeMargin=-1
-shadowOpacity=60
-shadowSize=45
-shadowsUpgraded=true
-showGlow=false
-splitterPosition=1
-splitterPosition2=2
-tasksUpgraded=true
-thickMargin=15
-zoomLevel=16
-
-[Containments][16][Indicator]
-customType=
-enabled=true
-enabledForApplets=true
-padding=0.10000000149011612
-type=org.kde.latte.default
-
-[Containments][16][Indicator][org.kde.latte.default][General]
-activeStyle=Dot
-minimizedTaskColoredDifferently=true
-
-[Containments][18]
+[Containments][15]
 activityId=
 byPassWM=false
 dockWindowBehavior=true
@@ -338,12 +178,12 @@ lastScreen=13
 layoutId=
 location=4
 maxLength=100
-name=Mi - Alt - Nvidia
+name=Laptop - Alt
 onPrimary=false
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
-screensGroup=0
+screensGroup=2
 settingsComplexity=4
 timerHide=700
 timerShow=200
@@ -351,284 +191,121 @@ viewType=0
 visibility=2
 wallpaperplugin=org.kde.image
 
-[Containments][18][Applets][64]
-immutability=1
-plugin=org.kde.latte.separator
-
-[Containments][18][Applets][64][Configuration]
-PreloadWeight=0
-
-[Containments][18][Applets][65]
-immutability=1
-plugin=org.kde.plasma.minimizeall
-
-[Containments][18][Applets][65][Configuration]
-PreloadWeight=0
-
-[Containments][18][Applets][65][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][18][Applets][66]
-activityId=
-formfactor=0
-immutability=1
-lastScreen=-1
-location=0
-plugin=org.kde.plasma.folder
-wallpaperplugin=
-
-[Containments][18][Applets][66][Configuration]
-PreloadWeight=0
-activityId=
-formfactor=0
-immutability=1
-lastScreen=-1
-location=0
-plugin=org.kde.plasma.folder
-wallpaperplugin=
-
-[Containments][18][Applets][66][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][18][Applets][66][Configuration][General]
-labelMode=3
-labelText=İndirilenler
-positions={"1920x1080":[]\\,"1600x900":[""]}
-url=file:///home/keyiflerolsun/İndirilenler
-viewMode=1
-
-[Containments][18][Applets][67]
-immutability=1
-plugin=org.kde.latte.plasmoid
-
-[Containments][18][Applets][67][Configuration]
-PreloadWeight=0
-
-[Containments][18][Applets][67][Configuration][General]
-isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,applications:io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.anydesk.Anydesk.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
-manualScrollTasksType=Disabled
-
-[Containments][18][Applets][68]
+[Containments][15][Applets][42]
 immutability=1
 plugin=org.kde.latte.spacer
 
-[Containments][18][Applets][68][Configuration]
+[Containments][15][Applets][42][Configuration]
 PreloadWeight=0
 
-[Containments][18][Applets][68][Configuration][General]
+[Containments][15][Applets][42][Configuration][General]
 containmentType=Latte
 
-[Containments][18][Applets][69]
+[Containments][15][Applets][49]
+immutability=1
+plugin=org.kde.latte.spacer
+
+[Containments][15][Applets][49][Configuration]
+PreloadWeight=0
+
+[Containments][15][Applets][49][Configuration][General]
+containmentType=Latte
+
+[Containments][15][Applets][50]
 immutability=1
 plugin=org.kde.plasma.trash
 
-[Containments][18][Applets][69][Configuration]
+[Containments][15][Applets][50][Configuration]
 PreloadWeight=0
 
-[Containments][18][Applets][70]
+[Containments][15][Applets][51]
+immutability=1
+plugin=org.kde.latte.plasmoid
+
+[Containments][15][Applets][51][Configuration]
+PreloadWeight=0
+
+[Containments][15][Applets][51][Configuration][General]
+isInLatteDock=true
+launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.anydesk.Anydesk.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
+manualScrollTasksType=Disabled
+
+[Containments][15][Applets][52]
 immutability=1
 plugin=org.kde.latte.spacer
 
-[Containments][18][Applets][70][Configuration]
+[Containments][15][Applets][52][Configuration]
 PreloadWeight=0
 
-[Containments][18][Applets][70][Configuration][General]
+[Containments][15][Applets][52][Configuration][General]
 containmentType=Latte
 
-[Containments][18][Applets][71]
+[Containments][15][Applets][53]
+activityId=
+formfactor=0
 immutability=1
-plugin=org.kde.latte.spacer
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
 
-[Containments][18][Applets][71][Configuration]
+[Containments][15][Applets][53][Configuration]
+PreloadWeight=0
+activityId=
+formfactor=0
+immutability=1
+lastScreen=-1
+location=0
+plugin=org.kde.plasma.folder
+wallpaperplugin=
+
+[Containments][15][Applets][53][Configuration][ConfigDialog]
+DialogHeight=660
+DialogWidth=880
+
+[Containments][15][Applets][53][Configuration][General]
+labelMode=3
+labelText=İndirilenler
+positions={"1920x1080":[]\\,"1600x900":[]\\,"640x480":[]}
+url=file:///home/keyiflerolsun/İndirilenler
+viewMode=1
+
+[Containments][15][Applets][54]
+immutability=1
+plugin=org.kde.plasma.minimizeall
+
+[Containments][15][Applets][54][Configuration]
 PreloadWeight=0
 
-[Containments][18][Applets][71][Configuration][General]
-containmentType=Latte
+[Containments][15][Applets][54][Configuration][ConfigDialog]
+DialogHeight=660
+DialogWidth=880
 
-[Containments][18][ConfigDialog]
+[Containments][15][Applets][55]
+immutability=1
+plugin=org.kde.latte.separator
+
+[Containments][15][Applets][55][Configuration]
+PreloadWeight=0
+
+[Containments][15][ConfigDialog]
 DialogHeight=894
 DialogWidth=539
 
-[Containments][18][Configuration]
+[Containments][15][Configuration]
 PreloadWeight=0
 
-[Containments][18][General]
+[Containments][15][General]
 addLaunchersInTaskManager=false
 advanced=false
 alignment=0
 alignmentUpgraded=true
-appletOrder=67;70;68;71;64;66;65;69
+appletOrder=51;52;49;42;55;53;54;50
 iconSize=50
 inConfigureAppletsMode=true
-lockedZoomApplets=66;65;69
-panelShadows=false
-panelSize=5
-panelTransparency=20
-screenEdgeMargin=-1
-shadowOpacity=60
-shadowSize=45
-shadowsUpgraded=true
-showGlow=false
-splitterPosition=1
-splitterPosition2=2
-tasksUpgraded=true
-thickMargin=15
-zoomLevel=16
-
-[Containments][18][Indicator]
-customType=
-enabled=true
-enabledForApplets=true
-padding=0.10000000149011612
-type=org.kde.latte.default
-
-[Containments][18][Indicator][org.kde.latte.default][General]
-activeStyle=Dot
-minimizedTaskColoredDifferently=true
-
-[Containments][19]
-activityId=
-byPassWM=false
-dockWindowBehavior=true
-enableKWinEdges=true
-formfactor=2
-immutability=1
-isClonedFrom=-1
-isPreferredForShortcuts=false
-lastScreen=12
-layoutId=
-location=4
-maxLength=100
-name=Laptop - Alt - Nvidia
-onPrimary=false
-plugin=org.kde.latte.containment
-raiseOnActivityChange=false
-raiseOnDesktopChange=false
-screensGroup=0
-settingsComplexity=4
-timerHide=700
-timerShow=200
-viewType=0
-visibility=6
-wallpaperplugin=org.kde.image
-
-[Containments][19][Applets][72]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][19][Applets][72][Configuration]
-PreloadWeight=0
-
-[Containments][19][Applets][72][Configuration][General]
-containmentType=Latte
-
-[Containments][19][Applets][73]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][19][Applets][73][Configuration]
-PreloadWeight=0
-
-[Containments][19][Applets][73][Configuration][General]
-containmentType=Latte
-
-[Containments][19][Applets][74]
-immutability=1
-plugin=org.kde.plasma.trash
-
-[Containments][19][Applets][74][Configuration]
-PreloadWeight=0
-
-[Containments][19][Applets][75]
-immutability=1
-plugin=org.kde.latte.plasmoid
-
-[Containments][19][Applets][75][Configuration]
-PreloadWeight=0
-
-[Containments][19][Applets][75][Configuration][General]
-isInLatteDock=true
-launchers59=applications:brave-browser.desktop,applications:org.telegram.desktop.desktop,applications:code_code.desktop,applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:org.manjaro.pamac.manager.desktop,file:///var/lib/flatpak/exports/share/applications/io.github.mimbrero.WhatsAppDesktop.desktop,applications:org.remmina.Remmina.desktop,applications:com.anydesk.Anydesk.desktop,applications:com.teamviewer.TeamViewer.desktop,applications:com.spotify.Client.desktop,applications:com.mongodb.Compass.desktop,applications:com.github.sdv43.whaler.desktop,applications:authy_authy.desktop
-manualScrollTasksType=Disabled
-
-[Containments][19][Applets][76]
-immutability=1
-plugin=org.kde.latte.spacer
-
-[Containments][19][Applets][76][Configuration]
-PreloadWeight=0
-
-[Containments][19][Applets][76][Configuration][General]
-containmentType=Latte
-
-[Containments][19][Applets][77]
-activityId=
-formfactor=0
-immutability=1
-lastScreen=-1
-location=0
-plugin=org.kde.plasma.folder
-wallpaperplugin=
-
-[Containments][19][Applets][77][Configuration]
-PreloadWeight=0
-activityId=
-formfactor=0
-immutability=1
-lastScreen=-1
-location=0
-plugin=org.kde.plasma.folder
-wallpaperplugin=
-
-[Containments][19][Applets][77][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][19][Applets][77][Configuration][General]
-labelMode=3
-labelText=İndirilenler
-positions={"1920x1080":[]\\,"1600x900":[]}
-url=file:///home/keyiflerolsun/İndirilenler
-viewMode=1
-
-[Containments][19][Applets][78]
-immutability=1
-plugin=org.kde.plasma.minimizeall
-
-[Containments][19][Applets][78][Configuration]
-PreloadWeight=0
-
-[Containments][19][Applets][78][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][19][Applets][79]
-immutability=1
-plugin=org.kde.latte.separator
-
-[Containments][19][Applets][79][Configuration]
-PreloadWeight=0
-
-[Containments][19][ConfigDialog]
-DialogHeight=894
-DialogWidth=539
-
-[Containments][19][Configuration]
-PreloadWeight=0
-
-[Containments][19][General]
-addLaunchersInTaskManager=false
-advanced=false
-alignment=0
-alignmentUpgraded=true
-appletOrder=75;76;73;72;79;77;78;74
-iconSize=50
-inConfigureAppletsMode=true
+isStickedOnBottomEdge=true
 lastWindowsVisibilityMode=6
-lockedZoomApplets=77;78;74
+lockedZoomApplets=53;54;50
 panelShadows=false
 panelSize=100
 panelTransparency=20
@@ -643,14 +320,14 @@ tasksUpgraded=true
 thickMargin=15
 zoomLevel=16
 
-[Containments][19][Indicator]
+[Containments][15][Indicator]
 customType=
 enabled=true
 enabledForApplets=true
 padding=0.10000000149011612
 type=org.kde.latte.default
 
-[Containments][19][Indicator][org.kde.latte.default][General]
+[Containments][15][Indicator][org.kde.latte.default][General]
 activeStyle=Dot
 minimizedTaskColoredDifferently=true
 
@@ -661,11 +338,11 @@ color=blue
 customBackground=
 customTextColor=
 icon=manjarolinux
-lastUsedActivity=5a04cb83-2d65-444b-94c2-07d80107921c
+lastUsedActivity=f7f4b301-1e70-4872-a6a0-4f75ca822329
 launchers=
 popUpMargin=-1
 preferredForShortcutsTouched=true
-schemeFile=~/.local/share/color-schemes/Dracula.colors
+schemeFile=
 showInMenu=true
 textColor=fcfcfc
 version=2
